# Uma-Integrated-Stat-Calculator

./: .editorconfig
godot/: NotoSansCJK-Regular.ttc.import  dynamic01.otf.import  export_presets.cfg  icon.svg.import  main.gd  main.gd.uid  project.godot  score.gd  score.gd.uid
godot/scenes/: main.tscn  param_bar.gd  param_bar.gd.uid  param_bar.tscn  param_box.gd  param_box.gd.uid  param_box.tscn  param_box_center.tscn  param_box_left.tscn  param_box_right.tscn  skill_list_item.gd  skill_list_item.gd.uid  skill_list_item.tscn
godot/themes/: dialog.theme
plugin/: Cargo.toml  build.sh
plugin/.cargo/: config.toml
plugin/src/: lib.rs  plugin_api.rs
plugin/src/il2cpp/: helper.rs  types.rs
plugin/src/il2cpp/gallop/: helper.rs
