[package]
name = "uisc-plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "1.11.1"
int-enum = "1.2.0"
rouille = "3.6.2"
serde = { version = "1.0.228", features = ["alloc", "derive"] }
serde_json = { version = "1.0.149", features = ["alloc"] }
tungstenite = "0.29.0"

[profile.release]
lto = "thin"
